<resources>
    <string name="app_open_test">ca-app-pub-3940256099942544/9257395921</string>
    <string name="cancel">Cancel</string>
    <string name="exit">EXIT</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure want to exit?</string>
    <string name="remove_ads">REMOVE ADS</string>
    <string name="remove_all_anoying_ads_forever_by_just">Remove all anoying ads forever by just:</string>
    <string name="buy_now">Buy now</string>
    <string name="loading_ads">Loading Ads…</string>
    <string name="well_comeback">Welcome back</string>

    <string-array name="list_id_test">
        <!--        app open-->
        <item>ca-app-pub-3940256099942544/9257395921</item>
        <!--        banner-->
        <item>ca-app-pub-3940256099942544/6300978111</item>
        <!--        interstitial-->
        <item>ca-app-pub-3940256099942544/1033173712</item>
        <!--        interstitial video-->
        <item>ca-app-pub-3940256099942544/8691691433</item>
        <!--        rewarded-->
        <item>ca-app-pub-3940256099942544/5224354917</item>
        <!--        rewarded-->
        <item>ca-app-pub-3940256099942544/5354046379</item>
        <!--        native-->
        <item>ca-app-pub-3940256099942544/2247696110</item>
        <!--        native video-->
        <item>ca-app-pub-3940256099942544/1044960115</item>
        <!--        reward-interstitial-->
        <item>ca-app-pub-3940256099942544/5354046379</item>
    </string-array>

    <string name="rating_invitation">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="please_feedback">Please give us some feedback</string>
    <string name="thanks_feedback">Thanks for your feedback</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="oh_no">Oh, no!</string>
    <string name="the_best_we_can_get">The best we can get :)</string>
    <string name="rate_us">Rate us</string>
    <string name="gmail_package">com.google.android.gm</string>
    <string name="mail_fixback_rated">publishing.apero@gmail.com</string>
    <string name="subject_mail_fixback_rate">"[%1$s] Feedback</string>
    <string name="content_mail_fixback_rate">"i. %1$s \nii. Rate star (eg: %2$s/5) \niii. Feedback text"</string>
    <string name="rate_start_event">rate_star_%1$s</string>

    <string name="init_adjust_success">init adjust sdk successfully</string>
    <string name="init_adjust_fail">init adjust sdk failed</string>
    <string name="init_fb_success">init facebook sdk successfully</string>
    <string name="init_fb_fail">init facebook sdk failed</string>
    <string name="adjust_token">Adjust Token :  </string>
    <string name="adjust_env">Adjust Environment :  </string>
    <string name="fb_ctoken">Facebook Client Token :  </string>
    <string name="fb_appid">"Facebook App Id : "</string>
    <string name="volume_down">down</string>
    <string name="volume_up">up</string>

</resources>
